# cs336-a1-sol

./: .gitignore  LICENSE  README.md  main.py  modal_bench.py  modal_te.py  pyproject.toml
agentic/: SOL_NOTES.md  SOL_TODO.md  TOKENIZER_STUDY.md
results/: CANON.md  owt_final_report.md
scripts/: bench_sol.sh  bench_sol_parallel.sh  eval_canon.py  local_profile.py  make_report_owt_final.py  muon_copy_bench.py  mxfp8_bench.py  optuna_search.py  run_train.sh  sample_ui.py  sample_ui_owt.py  setup_sol_env.sh  step_timeline.py  te_bench_local.py  tokenize_owt.py  tokenizer_study.py  train_bpe_owt.py  train_bpe_tinystories.py  vast_sync.sh  verify_ce_softcap.py  verify_softcap_form.py  verify_ve_gates.py
tokenizers/owt/: merges.pkl
tokenizers/tinystories/: merges.pkl
transformer_lm/: __init__.py  data_packing.py  generate.py  modules.py  quack_ce_softcap.py  quack_ops.py  sol_modules.py  tokenizer.py  train_script.py  train_sol.py
